--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xyz-wabot",
+  "name": "Aiman",
   "version": "2.2.1",
   "description": "For plagiator: Saya yakin, anda punya kreativitas sendiri. Jika anda masih saja mencopas list kami, apa gunanya otak anda",
   "main": "index.js",
